--- a/src/app/pages/bebida/bebida.component.html
+++ b/src/app/pages/bebida/bebida.component.html
@@ -1,3 +1,34 @@
-<div *ngFor="let bebida of bebidas">
-    {{bebida.nome}}
-</div>
+<table mat-table [dataSource]="bebidas" class="mat-elevation-z8">
+    <!-- Name Column -->
+    <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef> Nome </th>
+        <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+    </ng-container>
+
+    <!-- Preço Column -->
+    <ng-container matColumnDef="preco">
+        <th mat-header-cell *matHeaderCellDef> Preço </th>
+        <td mat-cell *matCellDef="let element"> {{element.preco | currency:'BRL':true}} </td>
+    </ng-container>
+
+    <!-- isAlcoolica Column -->
+    <ng-container matColumnDef="isAlcoolica">
+        <th mat-header-cell *matHeaderCellDef> Alcoolica </th>
+        <td mat-cell *matCellDef="let element"> {{element.isAlcoolica ? 'Sim' : 'Não'}} </td>
+    </ng-container>
+
+    <!-- Tipo Column -->
+    <ng-container matColumnDef="tipo">
+        <th mat-header-cell *matHeaderCellDef> Tipo </th>
+        <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
+    </ng-container>
+
+    <!-- Descrição Column -->
+    <ng-container matColumnDef="descricao">
+        <th mat-header-cell *matHeaderCellDef> Descrição </th>
+        <td mat-cell *matCellDef="let element"> {{element.descricao}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
