--- a/src/app/pages/bebida/bebida.component.html
+++ b/src/app/pages/bebida/bebida.component.html
@@ -1,5 +1,12 @@
+<div class="header">
+<button mat-raised-button (click)="adicionarBebida()" color="primary">
+    <mat-icon>add</mat-icon> Adicionar bebidas
+</button>
+</div>
+
 <table mat-table [dataSource]="bebidas" class="mat-elevation-z8">
     <!-- Name Column -->
+
     <ng-container matColumnDef="nome">
         <th mat-header-cell *matHeaderCellDef> Nome </th>
         <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
