--- a/src/app/pages/bebida/bebida.component.scss
+++ b/src/app/pages/bebida/bebida.component.scss
@@ -1,3 +1,11 @@
 table{
     width: 100%;
 }
+
+.header{
+    display: flex;
+    justify-content: flex-end;
+    align-content: center;
+    margin: 10px 0px;
+    padding: 10px;
+}
