--- a/src/app/pages/bebida/bebida.component.html
+++ b/src/app/pages/bebida/bebida.component.html
@@ -1,7 +1,7 @@
 <div class="header">
-<button mat-raised-button (click)="adicionarBebida()" color="primary">
-    <mat-icon>add</mat-icon> Adicionar bebidas
-</button>
+    <button mat-raised-button (click)="adicionarBebida()" color="primary">
+        <mat-icon>add</mat-icon> Adicionar bebidas
+    </button>
 </div>
 
 <table mat-table [dataSource]="bebidas" class="mat-elevation-z8">
@@ -35,6 +35,18 @@
         <th mat-header-cell *matHeaderCellDef> Descrição </th>
         <td mat-cell *matCellDef="let element"> {{element.descricao}} </td>
     </ng-container>
+
+    <!-- Excluir Column -->
+    <ng-container matColumnDef="excluir">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+            <button mat-icon-button (click)="excluirBebida(element)">
+                <mat-icon>delete</mat-icon>
+            </button>
+        </td>
+    </ng-container>
+
+
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
