--- a/src/app/pages/bebida/bebida.component.html
+++ b/src/app/pages/bebida/bebida.component.html
@@ -27,13 +27,23 @@
     <!-- Tipo Column -->
     <ng-container matColumnDef="tipo">
         <th mat-header-cell *matHeaderCellDef> Tipo </th>
-        <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.tipo | tipoBebida}} </td>
     </ng-container>
 
     <!-- Descrição Column -->
     <ng-container matColumnDef="descricao">
         <th mat-header-cell *matHeaderCellDef> Descrição </th>
         <td mat-cell *matCellDef="let element"> {{element.descricao}} </td>
+    </ng-container>
+
+      <!-- Editar Column -->
+      <ng-container matColumnDef="editar">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+            <button mat-icon-button (click)="editarBebida(element)">
+                <mat-icon>edit</mat-icon>
+            </button>
+        </td>
     </ng-container>
 
     <!-- Excluir Column -->
@@ -45,6 +55,8 @@
             </button>
         </td>
     </ng-container>
+
+  
 
 
 
