--- a/src/app/pages/navigation/navigation.component.html
+++ b/src/app/pages/navigation/navigation.component.html
@@ -5,9 +5,9 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/app/">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item routerLink="/app/bebida">Bebida</a>
+      <a mat-list-item routerLink="/app/comida">Comida</a>
+      <a mat-list-item routerLink="/app/reserva">Reservas</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
