--- a/src/app/pages/bebida/bebida.component.html
+++ b/src/app/pages/bebida/bebida.component.html
@@ -5,8 +5,8 @@
 </div>
 
 <table mat-table [dataSource]="bebidas" class="mat-elevation-z8">
-    <!-- Name Column -->
 
+    <!-- Nome Column -->
     <ng-container matColumnDef="nome">
         <th mat-header-cell *matHeaderCellDef> Nome </th>
         <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
@@ -36,8 +36,8 @@
         <td mat-cell *matCellDef="let element"> {{element.descricao}} </td>
     </ng-container>
 
-      <!-- Editar Column -->
-      <ng-container matColumnDef="editar">
+    <!-- Editar Column -->
+    <ng-container matColumnDef="editar">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
             <button mat-icon-button (click)="editarBebida(element)">
@@ -55,10 +55,6 @@
             </button>
         </td>
     </ng-container>
-
-  
-
-
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
