Melhoria da implementação de reservas

--- a/src/app/pages/bebida-editar-dialog/bebida-editar-dialog.component.html
+++ b/src/app/pages/bebida-editar-dialog/bebida-editar-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Adicionar bebida</h1>
+<h1 mat-dialog-title>Atualizar bebida</h1>
 <div mat-dialog-content>
     <form [formGroup]="form">
         <mat-form-field>
