--- a/src/app/pages/reserva-editar-dialog/reserva-editar-dialog.component.html
+++ b/src/app/pages/reserva-editar-dialog/reserva-editar-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Adicionar reservas</h1>
+<h1 mat-dialog-title>Atualizar reservas</h1>
 <div mat-dialog-content>
     <form [formGroup]="form">
         <mat-form-field>
@@ -18,7 +18,7 @@
 
         <mat-form-field>
             <mat-label>Data</mat-label>
-            <input matInput [matDatepicker]="data" formControlName="data"> 
+            <input matInput [matDatepicker]="data" formControlName="data">
             <mat-datepicker-toggle matSuffix [for]="data"></mat-datepicker-toggle>
             <mat-datepicker #data></mat-datepicker>
         </mat-form-field>
@@ -29,9 +29,9 @@
         </mat-form-field>
 
     </form>
-   </div>
+</div>
 
-    <div class="footer" mat-dialog-actions>
-        <button mat-raised-button color="primary" mat-dialog-close>Cancelar</button>
-        <button mat-raised-button cdkFocusInitial [disabled]="!form.valid" (click)="inserirReserva()">Adicionar</button>
-    </div>
+<div class="footer" mat-dialog-actions>
+    <button mat-raised-button color="primary" mat-dialog-close>Cancelar</button>
+    <button mat-raised-button cdkFocusInitial [disabled]="!form.valid" (click)="editarReserva()">Atualizar</button>
+</div>
