--- a/src/app/pages/reserva/reserva.component.html
+++ b/src/app/pages/reserva/reserva.component.html
@@ -15,7 +15,7 @@
     <!-- Data Column -->
     <ng-container matColumnDef="data">
         <th mat-header-cell *matHeaderCellDef> Data </th>
-        <td mat-cell *matCellDef="let element"> {{element.data}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.data | date:'dd/MM/yyyy HH:mm'}} </td>
     </ng-container>
 
     <!-- Horario Column -->
@@ -36,29 +36,26 @@
         <td mat-cell *matCellDef="let element"> {{element.mesa}} </td>
     </ng-container>
 
-      <!-- Editar Column -->
-      <!--
-      <ng-container matColumnDef="editar">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-icon-button (click)="editarBebida(element)">
-                <mat-icon>edit</mat-icon>
-            </button>
-        </td>
-    </ng-container>
-    -->
+ <!-- Editar Column -->
+ <ng-container matColumnDef="editar">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+        <button mat-icon-button (click)="editarReserva(element)">
+            <mat-icon>edit</mat-icon>
+        </button>
+    </td>
+</ng-container>
 
-    <!-- Excluir Column -->
-    <!--
-    <ng-container matColumnDef="excluir">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-icon-button (click)="excluirBebida(element)">
-                <mat-icon>delete</mat-icon>
-            </button>
-        </td>
-    </ng-container>
-    -->
+<!-- Excluir Column -->
+<ng-container matColumnDef="excluir">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+        <button mat-icon-button (click)="excluirReserva(element)">
+            <mat-icon>delete</mat-icon>
+        </button>
+    </td>
+</ng-container>
+
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
