Implementado crud funcionario

--- a/src/app/pages/navigation/navigation.component.html
+++ b/src/app/pages/navigation/navigation.component.html
@@ -8,6 +8,8 @@
       <a mat-list-item routerLink="/app/bebida">Bebida</a>
       <a mat-list-item routerLink="/app/comida">Comida</a>
       <a mat-list-item routerLink="/app/reserva">Reservas</a>
+      <a mat-list-item routerLink="/app/mesa">Mesas</a>
+      <a mat-list-item routerLink="/app/funcionario">Funcionário</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
