--- a/src/app/pages/comida-editar-dialog/comida-editar-dialog.component.html
+++ b/src/app/pages/comida-editar-dialog/comida-editar-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Adicionar comida</h1>
+<h1 mat-dialog-title>Atualizar comida</h1>
 <div mat-dialog-content>
     <form [formGroup]="form">
         <mat-form-field>
