--- a/src/app/pages/reserva/reserva.component.html
+++ b/src/app/pages/reserva/reserva.component.html
@@ -15,13 +15,13 @@
     <!-- Data Column -->
     <ng-container matColumnDef="data">
         <th mat-header-cell *matHeaderCellDef> Data </th>
-        <td mat-cell *matCellDef="let element"> {{element.data | date:'dd/MM/yyyy HH:mm'}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.data | date:'dd/MM/yyyy'}} </td>
     </ng-container>
 
     <!-- Horario Column -->
     <ng-container matColumnDef="horario">
         <th mat-header-cell *matHeaderCellDef> Horario </th>
-        <td mat-cell *matCellDef="let element"> {{element.horario}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.data | date:'HH:mm'}} </td>
     </ng-container>
 
     <!-- QuantidadeDePessoas Column -->
