Atualizado crud de reservas

--- a/src/app/pages/reserva/reserva.component.html
+++ b/src/app/pages/reserva/reserva.component.html
@@ -18,10 +18,10 @@
         <td mat-cell *matCellDef="let element"> {{element.data | date:'dd/MM/yyyy'}} </td>
     </ng-container>
 
-    <!-- Horario Column -->
-    <ng-container matColumnDef="horario">
-        <th mat-header-cell *matHeaderCellDef> Horario </th>
-        <td mat-cell *matCellDef="let element"> {{element.data | date:'HH:mm'}} </td>
+    <!-- Período Column -->
+    <ng-container matColumnDef="periodo">
+        <th mat-header-cell *matHeaderCellDef> Período </th>
+        <td mat-cell *matCellDef="let element"> {{element.periodo | periodo}} </td>
     </ng-container>
 
     <!-- QuantidadeDePessoas Column -->
