--- a/src/app/pages/reserva-editar-dialog/reserva-editar-dialog.component.html
+++ b/src/app/pages/reserva-editar-dialog/reserva-editar-dialog.component.html
@@ -24,8 +24,10 @@
         </mat-form-field>
 
         <mat-form-field>
-            <mat-label>Horario</mat-label>
-            <input matInput formControlName="hora" type="time">
+            <mat-label>Período</mat-label>
+            <mat-select formControlName="periodo">
+                <mat-option *ngFor="let p of periodos" [value]="p.value">{{p.label}}</mat-option>
+            </mat-select>
         </mat-form-field>
 
     </form>
